crates/analyzer/tests/snapshots/errors__call_undefined_function_on_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: No function `doesnt_exist` exists on type `C`
  ┌─ [snippet]:3:8
  │
3 │   self.doesnt_exist()
  │        ^^^^^^^^^^^^ undefined function


